[gd_scene load_steps=41 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://resources/texgyreadventor-regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/0001.png" type="Texture" id=3]
[ext_resource path="res://resources/pressssed.png" type="Texture" id=4]
[ext_resource path="res://resources/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/MainBg.png" type="Texture" id=6]
[ext_resource path="res://resources/topbar.png" type="Texture" id=7]
[ext_resource path="res://resources/sidebar.png" type="Texture" id=8]
[ext_resource path="res://resources/myname.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Logo.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/midbar.png" type="Texture" id=11]
[ext_resource path="res://resources/bart.png" type="Texture" id=12]
[ext_resource path="res://resources/submuit.png" type="Texture" id=13]
[ext_resource path="res://resources/b222222.png" type="Texture" id=14]
[ext_resource path="res://resources/b23.png" type="Texture" id=15]
[ext_resource path="res://listOption.gd" type="Script" id=16]
[ext_resource path="res://help.gd" type="Script" id=17]
[ext_resource path="res://resources/clockarrow.png" type="Texture" id=18]
[ext_resource path="res://resources/clocker.png" type="Texture" id=19]
[ext_resource path="res://resources/rawwe.png" type="Texture" id=20]
[ext_resource path="res://delete.gd" type="Script" id=21]
[ext_resource path="res://List.gd" type="Script" id=22]
[ext_resource path="res://resources/b01.png" type="Texture" id=23]
[ext_resource path="res://resources/b03.png" type="Texture" id=24]
[ext_resource path="res://resources/b0.png" type="Texture" id=25]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/pressssed.png-5db4549a5a9b5999d27c6e37904eb439.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/0001.png-8fc67e807ce8ae3e821f5ad78a17d1a6.stex"

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 17
font_data = ExtResource( 2 )

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 400.0
color = Color( 0.231373, 0.541176, 0.341176, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainBg" type="Sprite" parent="."]
position = Vector2( 299.896, 199.988 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Topbar" type="Sprite" parent="."]
position = Vector2( 299.896, 200.285 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sidebar" type="Sprite" parent="."]
position = Vector2( 256, 200 )
scale = Vector2( 1.26689, 1 )
texture = ExtResource( 8 )

[node name="task" type="TextureButton" parent="."]
margin_left = 94.7593
margin_top = 3.25085
margin_right = 199.759
margin_bottom = 26.2509
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preset" type="TextureButton" parent="."]
margin_left = 350.759
margin_top = 3.25085
margin_right = 455.759
margin_bottom = 26.2509
texture_pressed = SubResource( 1 )
texture_hover = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Myname" type="Sprite" parent="."]
position = Vector2( 581.378, 391.678 )
scale = Vector2( 0.613593, 0.551387 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" parent="." instance=ExtResource( 10 )]

[node name="Midbar" type="Sprite" parent="."]
position = Vector2( 299.865, 282.447 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 1.70474
margin_top = 84.0353
margin_right = 601.705
margin_bottom = 195.036
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "     Description                                                         Status"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 104.0
margin_top = 24.0
margin_right = 441.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 88.4151, 16.0809 )

[node name="bart" type="Sprite" parent="."]
position = Vector2( 339.902, 15.4318 )
texture = ExtResource( 12 )

[node name="displayItem" type="Node2D" parent="."]
position = Vector2( 78.1498, 30.8311 )
__meta__ = {
"_edit_lock_": true
}

[node name="header" type="Label" parent="displayItem"]
margin_left = 17.739
margin_top = 27.2441
margin_right = 170.739
margin_bottom = 49.2441
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.858824, 0.00392157, 1 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="date" type="Label" parent="displayItem"]
margin_left = 201.0
margin_top = 26.9966
margin_right = 356.0
margin_bottom = 48.9966
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.168627, 0.858824, 0.00392157, 1 )
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Preset" type="Node2D" parent="."]
visible = false

[node name="LineEdit1" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 35.0
margin_right = 596.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Preset"]
margin_left = 470.0
margin_top = 65.0
margin_right = 597.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 95.0
margin_right = 596.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 125.0
margin_right = 596.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit5" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 155.0
margin_right = 596.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit6" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 185.0
margin_right = 596.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit7" type="LineEdit" parent="Preset"]
margin_left = 469.0
margin_top = 215.0
margin_right = 596.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit8" type="LineEdit" parent="Preset"]
margin_left = 470.0
margin_top = 245.0
margin_right = 597.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 7 )
text = "testerrrrrrrrrrrrr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submit" type="TextureButton" parent="Preset"]
margin_left = 470.0
margin_top = 332.0
margin_right = 591.0
margin_bottom = 372.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listOption" type="TextureButton" parent="."]
margin_left = 217.0
margin_top = 2.0
margin_right = 322.0
margin_bottom = 23.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="listOption"]
visible = false
position = Vector2( 0, 5 )

[node name="box" type="Sprite" parent="listOption/menu"]
position = Vector2( 80.3234, 98.8098 )
scale = Vector2( 0.333607, 0.562532 )
texture = ExtResource( 20 )

[node name="labels" type="Label" parent="listOption/menu"]
margin_left = 12.2182
margin_top = 13.4551
margin_right = 91.2182
margin_bottom = 73.4551
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New List
Saved Lists
Premade Lists"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="listOption/menu"]
margin_left = -6.0
margin_top = -3.0
margin_right = 122.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newList" type="TextureButton" parent="listOption/menu/Control"]
margin_left = 15.0
margin_top = 12.347
margin_right = 147.0
margin_bottom = 41.347
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savedList" type="TextureButton" parent="listOption/menu/Control"]
margin_left = 15.0
margin_top = 36.0
margin_right = 147.0
margin_bottom = 59.0
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="premadeList" type="TextureButton" parent="listOption/menu/Control"]
margin_left = 15.0
margin_top = 54.636
margin_right = 147.0
margin_bottom = 77.636
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="TextureButton" parent="."]
margin_left = 479.0
margin_top = 4.0
margin_right = 584.0
margin_bottom = 24.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="help"]
visible = false

[node name="box" type="Sprite" parent="help/menu"]
position = Vector2( 81.5208, 101.916 )
scale = Vector2( 0.333607, 0.562532 )
texture = ExtResource( 20 )

[node name="labels" type="Label" parent="help/menu"]
margin_left = 25.2182
margin_top = 14.4551
margin_right = 104.218
margin_bottom = 74.4551
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tasks
Lists
Pre-Made"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="help/menu"]
margin_left = -2.0
margin_right = 118.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpTask" type="TextureButton" parent="help/menu"]
margin_left = 8.7818
margin_top = 12.4364
margin_right = 140.782
margin_bottom = 32.4364
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpList" type="TextureButton" parent="help/menu"]
margin_left = 9.0
margin_top = 33.0
margin_right = 141.0
margin_bottom = 56.0
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpPreset" type="TextureButton" parent="help/menu"]
margin_left = 9.0
margin_top = 52.0
margin_right = 141.0
margin_bottom = 75.0
rect_scale = Vector2( 0.75, 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helper" type="Node2D" parent="."]
position = Vector2( 0, 76 )

[node name="task" type="Node2D" parent="Helper"]
visible = false

[node name="text" type="Label" parent="Helper/task"]
margin_left = 474.0
margin_top = 38.0
margin_right = 592.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "To add a new task
click the Task Button 
at the top Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" type="Label" parent="Helper/task"]
margin_left = 474.0
margin_top = 113.719
margin_right = 592.0
margin_bottom = 157.719
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Click the X button to
delete/finish a task"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text4" type="Label" parent="Helper/task"]
margin_left = 474.944
margin_top = 165.376
margin_right = 592.944
margin_bottom = 209.376
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Set the status of the
task by clicking it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="Node2D" parent="Helper"]
visible = false

[node name="text" type="Label" parent="Helper/list"]
margin_left = 473.122
margin_top = 0.136696
margin_right = 591.122
margin_bottom = 123.137
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "

Add a task
or load a preloaded
List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text3" type="Label" parent="Helper/list"]
margin_left = 473.056
margin_top = 260.464
margin_right = 595.056
margin_bottom = 320.464
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Add Premade tasks
in Presets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deleteList" type="TextureButton" parent="Helper/list"]
margin_left = 472.518
margin_top = 199.784
margin_right = 593.518
margin_bottom = 239.784
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text4" type="Label" parent="Helper/list"]
margin_left = 504.892
margin_top = 202.492
margin_right = 626.892
margin_bottom = 262.492
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option" type="Label" parent="Helper/list"]
margin_left = 470.0
margin_top = 126.0
margin_right = 574.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Would you like 
 to Delete List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="Label" parent="Helper/list"]
margin_left = 473.536
margin_top = 177.046
margin_right = 595.536
margin_bottom = 204.046
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.666667, 0.0313726, 0.0313726, 1 )
text = "nope"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="presets" type="Node2D" parent="Helper"]
visible = false

[node name="text2" type="Label" parent="Helper/presets"]
margin_left = 479.0
margin_top = 36.0
margin_right = 597.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Make Current List
as a Pre-Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="makepreload" type="TextureButton" parent="Helper/presets"]
margin_left = 472.0
margin_top = 77.707
margin_right = 593.0
margin_bottom = 104.707
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Helper/presets/makepreload"]
margin_left = 14.0
margin_top = 4.293
margin_right = 107.0
margin_bottom = 28.293
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MAKE PRELOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clocker" type="TextureButton" parent="."]
visible = false
margin_left = 361.525
margin_top = 189.99
margin_right = 650.525
margin_bottom = 478.99
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clockarrow" type="Sprite" parent="clocker"]
position = Vector2( 146.329, 141.772 )
texture = ExtResource( 18 )
offset = Vector2( 0.004, -50 )

[node name="List" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="newList" type="Node2D" parent="List"]
visible = false
z_index = 100

[node name="Control" type="Control" parent="List/newList"]
margin_left = 107.0
margin_top = 171.0
margin_right = 302.0
margin_bottom = 287.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rawwe" type="Sprite" parent="List/newList"]
position = Vector2( 258.5, 329 )
scale = Vector2( 0.685455, 1 )
texture = ExtResource( 20 )

[node name="Label2" type="Label" parent="List/newList"]
margin_left = 121.0
margin_top = 171.0
margin_right = 242.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter List Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="LineEdit" parent="List/newList"]
anchor_left = 1.14876
anchor_right = 1.14876
margin_left = 139.0
margin_top = 210.0
margin_right = 260.0
margin_bottom = 236.0
max_length = 18
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submit" type="TextureButton" parent="List/newList"]
margin_left = 143.206
margin_top = 251.327
margin_right = 264.206
margin_bottom = 277.327
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="List/newList"]
margin_left = 278.39
margin_top = 173.142
margin_right = 302.39
margin_bottom = 198.142
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="List/newList"]
margin_left = 120.0
margin_top = 327.0
margin_right = 298.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Create a Brand new List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="List/newList"]
margin_left = 145.091
margin_top = 115.0
margin_right = 309.091
margin_bottom = 153.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "New List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savedList" type="Node2D" parent="List"]

[node name="cancel" type="Button" parent="List/savedList"]
margin_left = 434.692
margin_top = 113.246
margin_right = 459.692
margin_bottom = 138.246
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="List/savedList"]
margin_left = 580.516
margin_top = 36.8372
margin_right = 599.516
margin_bottom = 64.8372
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="List/savedList"]
margin_left = 579.911
margin_top = 295.735
margin_right = 598.911
margin_bottom = 323.735
text = "v"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="List/savedList"]
margin_left = 31.4324
margin_top = 175.189
margin_right = 445.432
margin_bottom = 354.189
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "To add a new list Click List Option at the top
to delete your current List go to Settings/Lists then delete

Available Lists on the Side bar to the Right.

Save the List as a preLoad in Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="List/savedList"]
margin_left = 145.091
margin_top = 115.0
margin_right = 309.091
margin_bottom = 153.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Saved Lists"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="premadeList" type="Node2D" parent="List"]
visible = false

[node name="Label2" type="Label" parent="List/premadeList"]
margin_left = 468.0
margin_top = 82.0
margin_right = 604.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="List/premadeList"]
margin_left = 145.091
margin_top = 115.0
margin_right = 309.091
margin_bottom = 153.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pre-Made Lists"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="List/premadeList"]
margin_left = 31.4324
margin_top = 175.189
margin_right = 445.432
margin_bottom = 354.189
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Select any Pre-Made List in the side bar

Pre-Made Lists Make repetitive tasks easy to accomplish 
You can submit your own list as a Pre-Made
 in Settings/Pre-Made

To delete a premade List Click Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="List/premadeList"]
margin_left = 439.397
margin_top = 110.879
margin_right = 461.397
margin_bottom = 132.879
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="List/premadeList"]
margin_left = 580.516
margin_top = 36.8372
margin_right = 599.516
margin_bottom = 64.8372
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="List/premadeList"]
margin_left = 579.911
margin_top = 295.735
margin_right = 598.911
margin_bottom = 323.735
text = "v"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down2" type="Button" parent="List/premadeList"]
margin_left = 304.907
margin_top = 331.087
margin_right = 359.907
margin_bottom = 359.087
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Node2D" parent="List/premadeList"]
visible = false
script = ExtResource( 21 )

[node name="rawwe" type="Sprite" parent="List/premadeList/delete"]
position = Vector2( 330, 325 )
texture = ExtResource( 20 )

[node name="down3" type="Button" parent="List/premadeList/delete"]
margin_left = 207.907
margin_top = 247.087
margin_right = 289.907
margin_bottom = 275.087
text = "Delete List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="List/premadeList/delete"]
margin_left = 108.0
margin_top = 189.0
margin_right = 390.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter the name you wish to delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel2" type="Button" parent="List/premadeList/delete"]
margin_left = 370.532
margin_top = 166.246
margin_right = 392.532
margin_bottom = 188.246
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="LineEdit" parent="List/premadeList/delete"]
margin_left = 155.832
margin_top = 218.238
margin_right = 335.832
margin_bottom = 242.238
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up" type="Button" parent="."]
margin_left = 443.318
margin_top = 109.0
margin_right = 462.318
margin_bottom = 137.0
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down" type="Button" parent="."]
margin_left = 442.713
margin_top = 367.898
margin_right = 461.713
margin_bottom = 395.898
text = "v"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="draw" from="." to="." method="initialLoad"]
[connection signal="pressed" from="task" to="." method="handleKeyboard"]
[connection signal="pressed" from="preset" to="." method="presetsPressed"]
[connection signal="pressed" from="Preset/submit" to="." method="submitPresets"]
[connection signal="mouse_entered" from="listOption" to="listOption" method="mouseEntered"]
[connection signal="mouse_exited" from="listOption/menu/Control" to="listOption" method="destroy"]
[connection signal="pressed" from="listOption/menu/Control/newList" to="listOption" method="newList"]
[connection signal="pressed" from="listOption/menu/Control/savedList" to="listOption" method="savedList"]
[connection signal="pressed" from="listOption/menu/Control/premadeList" to="listOption" method="premadeList"]
[connection signal="mouse_entered" from="help" to="help" method="mouseEntered"]
[connection signal="mouse_exited" from="help/menu/Control" to="help" method="destroy"]
[connection signal="pressed" from="help/menu/helpTask" to="help" method="helpTask"]
[connection signal="pressed" from="help/menu/helpList" to="help" method="helpList"]
[connection signal="pressed" from="help/menu/helpPreset" to="help" method="helpPreset"]
[connection signal="pressed" from="Helper/list/deleteList" to="help" method="hideMe"]
[connection signal="pressed" from="Helper/list/deleteList" to="List" method="deleteList"]
[connection signal="pressed" from="Helper/presets/makepreload" to="help" method="hideMe"]
[connection signal="pressed" from="Helper/presets/makepreload" to="List" method="SaveAsPreload"]
[connection signal="pressed" from="List/newList/submit" to="List" method="submit"]
[connection signal="pressed" from="List/newList/cancel" to="List" method="destroy"]
[connection signal="pressed" from="List/newList/cancel" to="List" method="_on_cancel_pressed"]
[connection signal="pressed" from="List/savedList/cancel" to="List" method="destroy"]
[connection signal="pressed" from="List/savedList/cancel" to="List" method="_on_cancel_pressed"]
[connection signal="pressed" from="List/savedList/Button3" to="List" method="moveUp"]
[connection signal="pressed" from="List/savedList/Button4" to="List" method="moveDown"]
[connection signal="pressed" from="List/premadeList/cancel" to="List" method="destroy"]
[connection signal="pressed" from="List/premadeList/cancel" to="List" method="_on_cancel_pressed"]
[connection signal="pressed" from="List/premadeList/Button5" to="List" method="moveUp"]
[connection signal="pressed" from="List/premadeList/Button6" to="List" method="moveDown"]
[connection signal="pressed" from="List/premadeList/down2" to="List/premadeList/delete" method="openMenu"]
[connection signal="pressed" from="List/premadeList/delete/down3" to="List/premadeList/delete" method="closeMenu"]
[connection signal="pressed" from="List/premadeList/delete/down3" to="List/premadeList/delete" method="deleteButtonPressed"]
[connection signal="pressed" from="List/premadeList/delete/cancel2" to="List/premadeList/delete" method="closeMenu"]
[connection signal="pressed" from="up" to="." method="moveUp"]
[connection signal="pressed" from="down" to="." method="moveDown"]
